--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "react": "^18.3.1",
@@ -17,6 +18,7 @@
     "react-outside-click-handler": "^1.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
