--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.2.0",
     "react-outside-click-handler": "^1.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4",
